src-ken&y/objects/Accounting_Entry_Line__c.object
<CustomObject>
    <customHelpPage>HelpAccountingEntries</customHelpPage>
    <description>Accounting Entry Lines</description>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Code</label>
        <referenceTo>Accounting_Code__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Entry__c</fullName>
        <label>Accounting Entry</label>
        <referenceTo>Accounting_Entry__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Rule</label>
        <referenceTo>Accounting_Rule__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_ID__c</fullName>
        <label>Allocation ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_CR__c</fullName>
        <description>Credit amount for this transaction</description>
        <label>Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_DR__c</fullName>
        <description>Debit amount for this transaction</description>
        <label>Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Balance_f__c</fullName>
        <formula>IF(NOT(GL_Account__r.Contra_Account__c) , 

IF(ISBLANK(GL_Account__r.GL_Type__c), 
    IF( ISPICKVAL(GL_Account__r.Normal_Balance__c, &apos;Credit&apos;), Amount_CR__c - Amount_DR__c, 
        IF(ISPICKVAL(GL_Account__r.Normal_Balance__c, &apos;Debit&apos;), Amount_DR__c - Amount_CR__c,0)
     ),
    IF( ISPICKVAL( GL_Account__r.GL_Type__r.Normal_Balance__c , &apos;Credit&apos;), Amount_CR__c - Amount_DR__c, 
        IF(ISPICKVAL(GL_Account__r.GL_Type__r.Normal_Balance__c, &apos;Debit&apos;), Amount_DR__c - Amount_CR__c,0)
    )
), 

IF(ISBLANK(GL_Account__r.GL_Type__c), 
    IF( ISPICKVAL(GL_Account__r.Normal_Balance__c, &apos;Credit&apos;), Amount_DR__c - Amount_CR__c, 
        IF(ISPICKVAL(GL_Account__r.Normal_Balance__c, &apos;Debit&apos;), Amount_CR__c - Amount_DR__c,0)
     ),
    IF( ISPICKVAL( GL_Account__r.GL_Type__r.Normal_Balance__c , &apos;Credit&apos;), Amount_DR__c - Amount_CR__c, 
        IF(ISPICKVAL(GL_Account__r.GL_Type__r.Normal_Balance__c, &apos;Debit&apos;), Amount_CR__c - Amount_DR__c,0)
    )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Transaction</label>
        <referenceTo>Bank_Transaction__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COMP_Functional_Conversion_Rate__c</fullName>
        <description>Functional Currency Conversion Rate for the Company Ledger ( COMP).</description>
        <inlineHelpText>Functional currency conversion rate for the company ledger.</inlineHelpText>
        <label>COMP Functional Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMP_Functional_Currency_Amount_CR__c</fullName>
        <description>Functional Currency Amount Credit for the Company Ledger ( COMP).</description>
        <inlineHelpText>Functional currency amount credit for the company ledger.</inlineHelpText>
        <label>COMP Functional Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMP_Functional_Currency_Amount_DR__c</fullName>
        <description>Functional Currency Amount Debit for the Company Ledger ( COMP).</description>
        <inlineHelpText>Functional currency amount debit for the company ledger.</inlineHelpText>
        <label>COMP Functional Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMP_Functional_Currency__c</fullName>
        <description>Functional Currency for the Company Ledger (COMP).</description>
        <inlineHelpText>Functional currency for the company ledger.</inlineHelpText>
        <label>COMP Functional Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMP_Transaction_Currency_Amount_CR__c</fullName>
        <description>Transaction Amount Credit for the Company Ledger ( COMP).</description>
        <inlineHelpText>Transaction amount credit for the company ledger.</inlineHelpText>
        <label>COMP Transaction Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMP_Transaction_Currency_Amount_DR__c</fullName>
        <description>Transaction Amount Debit for the Company Ledger ( COMP).</description>
        <inlineHelpText>Transaction amount debit for the company ledger.</inlineHelpText>
        <label>COMP Transaction Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMP_Transaction_Currency__c</fullName>
        <description>Transaction Currency for the Company Ledger ( COMP).</description>
        <inlineHelpText>Transaction currency for the company ledger.</inlineHelpText>
        <label>COMP Transaction Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONSOL_Functional_Conversion_Rate__c</fullName>
        <description>Functional Currency Conversion Rate for the Consolidation Ledger ( CONSOL ).</description>
        <inlineHelpText>Functional currency conversion rate for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Functional Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Functional_Currency_Amount_CR__c</fullName>
        <description>Functional Currency Amount Credit for the Consolidation Ledger ( CONSOL).</description>
        <inlineHelpText>Functional currency amount credit for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Functional Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Functional_Currency_Amount_DR__c</fullName>
        <description>Functional Currency Amount Debit for the Consolidation Ledger ( CONSOL ).</description>
        <inlineHelpText>Functional currency amount debit for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Functional Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Functional_Currency__c</fullName>
        <description>Functional Currency for the Consolidation Ledger (CONSOL).</description>
        <inlineHelpText>Functional currency for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Functional Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONSOL_Reporting_Conversion_Rate__c</fullName>
        <description>Reporting Currency Conversion Rate for the Consolidation Ledger ( CONSOL ).</description>
        <inlineHelpText>Reporting currency conversion rate for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Reporting Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Reporting_Currency_Amount_CR__c</fullName>
        <description>Reporting Currency Amount Credit for the Consolidation Ledger ( CONSOL).</description>
        <inlineHelpText>Reporting currency amount credit for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Reporting Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Reporting_Currency_Amount_DR__c</fullName>
        <description>Reporting Currency Amount Debit for the Consolidation Ledger ( CONSOL).</description>
        <inlineHelpText>Reporting currency amount debit for the consolidation ledger..</inlineHelpText>
        <label>CONSOL Reporting Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Reporting_Currency__c</fullName>
        <description>Reporting Currency for the Consolidation Ledger (CONSOL).</description>
        <inlineHelpText>Reporting currency for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Reporting Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONSOL_Transaction_Currency_Amount_CR__c</fullName>
        <description>Transaction Currency Amount Credit for the Consolidation Ledger ( CONSOL).</description>
        <inlineHelpText>Transaction currency amount credit for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Transaction Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Transaction_Currency_Amount_DR__c</fullName>
        <description>Transaction Currency Amount Debit for the Consolidation Ledger ( CONSOL).</description>
        <inlineHelpText>Transaction currency amount debit for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Transaction Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONSOL_Transaction_Currency__c</fullName>
        <description>Transaction Currency for the Consolidation Ledger (CONSOL).</description>
        <inlineHelpText>Transaction currency for the consolidation ledger.</inlineHelpText>
        <label>CONSOL Transaction Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Balance_FC__c</fullName>
        <formula>COMP_Functional_Currency_Amount_DR__c -  COMP_Functional_Currency_Amount_CR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp Balance FC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Balance_TC__c</fullName>
        <formula>COMP_Transaction_Currency_Amount_DR__c - COMP_Transaction_Currency_Amount_CR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp Balance TC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name</description>
        <formula>Accounting_Entry__r.Company__r.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Accounting_Entry__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Invoice Line</label>
        <referenceTo>Customer_Invoice_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Receipt Line</label>
        <referenceTo>Customer_Receipt_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>If error occurs the error message will be stored in this field</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exception is set to true when the line has any exception set to true which will cause the header Exception to set it to true</description>
        <inlineHelpText>A checkmark indicates that there is one or more exceptions associated with this accounting entry/line (header record).</inlineHelpText>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FX_Date__c</fullName>
        <label>FX Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FX_Flow__c</fullName>
        <label>FX Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL account</description>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>GL Account used in the Accounting rule is Inactive. Please Select a Active GL Account</errorMessage>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines (Interco)</relationshipLabel>
        <relationshipName>Interco_Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Transaction</label>
        <referenceTo>Inventory_Transaction__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>Invoice_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Cost_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Item Cost Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal_Entry_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Entry Line</label>
        <referenceTo>Journal_Entry_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandatory_Segment_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mandatory Segment Exception is set to true when any of the mandatory segments are null</description>
        <inlineHelpText>A check mark  indicates that one or more mandatory segments are null. AEL</inlineHelpText>
        <label>Mandatory Segment Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Line</label>
        <referenceTo>Payment_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <description>Period Name</description>
        <formula>Accounting_Entry__r.Period__r.Name</formula>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Accounting_Entry_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Accounting Entry Line</label>
        <referenceTo>Accounting_Entry_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invertor</fullName>
                </value>
                <value>
                    <fullName>Investee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCOA_Name__c</fullName>
        <formula>Company__r.Name &amp;&quot;-&quot;&amp; GL_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The chart of accounts to which the line belongs. AEL</inlineHelpText>
        <label>SCOA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCOA_Valid__c</fullName>
        <formula>Accounting_Code__r.Valid__c</formula>
        <label>SCOA Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STAT_Functional_Conversion_Rate__c</fullName>
        <description>Functional Currency Conversion Rate for the Statutory Ledger ( STAT).</description>
        <inlineHelpText>Functional currency conversion rate for the statutory ledger.</inlineHelpText>
        <label>STAT Functional Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Functional_Currency_Amount_CR__c</fullName>
        <description>Functional Currency Amount Credit for the Statutory Ledger ( STAT ).</description>
        <inlineHelpText>Functional currency amount credit for the statutory ledger.</inlineHelpText>
        <label>STAT Functional Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Functional_Currency_Amount_DR__c</fullName>
        <description>Functional Currency Amount Debit for the Statutory Ledger ( STAT ).</description>
        <inlineHelpText>Functional currency amount debit for the statutory ledger.</inlineHelpText>
        <label>STAT Functional Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Functional_Currency__c</fullName>
        <description>Functional Currency for the Statutory Ledger (STAT).</description>
        <inlineHelpText>Functional currency for the statutory ledger.</inlineHelpText>
        <label>STAT Functional Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAT_Reporting_Conversion_Rate__c</fullName>
        <description>Reporting Currency Conversion Rate for the Statutory Ledger ( STAT).</description>
        <inlineHelpText>Reporting currency conversion rate for the statutory ledger.</inlineHelpText>
        <label>STAT Reporting Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Reporting_Currency_Amount_CR__c</fullName>
        <description>Reporting Currency Amount Credit for the Statutory Ledger ( STAT ).</description>
        <inlineHelpText>Reporting currency amount credit for the Statutory Ledger ( STAT ).</inlineHelpText>
        <label>STAT Reporting Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Reporting_Currency_Amount_DR__c</fullName>
        <description>Reporting Currency Amount Debit for the Statutory Ledger ( STAT ).</description>
        <inlineHelpText>Reporting currency amount debit for the statutory ledger.</inlineHelpText>
        <label>STAT Reporting Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Reporting_Currency__c</fullName>
        <description>Reporting Currency for the Statutory Ledger (STAT).</description>
        <inlineHelpText>Reporting currency for the statutory ledger.</inlineHelpText>
        <label>STAT Reporting Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAT_Transaction_Currency_Amount_CR__c</fullName>
        <description>Transaction Currency Amount Credit for the Statutory Ledger ( STAT ).</description>
        <inlineHelpText>Transaction currency amount credit for the statutory ledger.</inlineHelpText>
        <label>STAT Transaction Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Transaction_Currency_Amount_DR__c</fullName>
        <description>Transaction Currency Amount Debit for the Statutory Ledger ( STAT ).</description>
        <inlineHelpText>Transaction currency amount debit for the statutory ledger.</inlineHelpText>
        <label>STAT Transaction Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAT_Transaction_Currency__c</fullName>
        <description>Transaction Currency for the Statutory Ledger (STAT).</description>
        <inlineHelpText>Transaction currency for the statutory ledger.</inlineHelpText>
        <label>STAT Transaction Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUB_Functional_Conversion_Rate__c</fullName>
        <description>Functional Currency Conversion Rate for the Subsidiary Ledger ( SUB ).</description>
        <inlineHelpText>Functional currency conversion rate for the subsidiary ledger.</inlineHelpText>
        <label>SUB Functional Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Functional_Currency_Amount_CR__c</fullName>
        <description>Functional Currency Amount Credit for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Functional currency amount credit for the subsidiary ledger.</inlineHelpText>
        <label>SUB Functional Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Functional_Currency_Amount_DR__c</fullName>
        <description>Functional Currency Amount Debit for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Functional currency amount debit for the subsidiary ledger.</inlineHelpText>
        <label>SUB Functional Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Functional_Currency__c</fullName>
        <description>Functional Currency for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Functional currency for the subsidiary ledger.</inlineHelpText>
        <label>SUB Functional Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUB_Reporting_Conversion_Rate__c</fullName>
        <description>Reporting Currency Conversion Rate for the Subsidiary Ledger ( SUB ).</description>
        <inlineHelpText>Reporting currency conversion rate for the subsidiary ledger.</inlineHelpText>
        <label>SUB Reporting Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Reporting_Currency_Amount_CR__c</fullName>
        <description>Reporting Currency Amount Credit for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Reporting currency amount credit for the subsidiary ledger.</inlineHelpText>
        <label>SUB Reporting Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Reporting_Currency_Amount_DR__c</fullName>
        <description>Reporting Currency Amount Debit for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Reporting currency amount debit for the subsidiary ledger.</inlineHelpText>
        <label>SUB Reporting Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Reporting_Currency__c</fullName>
        <description>Reporting Currency for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Reporting currency for the subsidiary ledger.</inlineHelpText>
        <label>SUB Reporting Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUB_Transaction_Currency_Amount_CR__c</fullName>
        <description>Transaction Currency Amount Credit for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Transaction currency amount credit for the subsidiary ledger.</inlineHelpText>
        <label>SUB Transaction Currency Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Transaction_Currency_Amount_DR__c</fullName>
        <description>Transaction Currency Amount Debit for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Transaction currency amount debit for the subsidiary ledger.</inlineHelpText>
        <label>SUB Transaction Currency Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUB_Transaction_Currency__c</fullName>
        <description>Transaction Currency for the Subsidiary Ledger (SUB).</description>
        <inlineHelpText>Transaction currency for the subsidiary ledger.</inlineHelpText>
        <label>SUB Transaction Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Combination_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Segment Combination Exception flag is set to true if the combination is incorrect during the validation</description>
        <inlineHelpText>A check mark indicates that the segment combination was incorrect during the validation process. AEL</inlineHelpText>
        <label>Segment Combination Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_Key__c</fullName>
        <externalId>true</externalId>
        <label>Segment Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Validation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Segment Validation Flag is checked means the account validation is successful</description>
        <inlineHelpText>A check mark indicates that the account validation process was successful. AEL</inlineHelpText>
        <label>Segment Validation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>AEL</inlineHelpText>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <description>The record ID of the related record providing the source data for this accounting entry line.</description>
        <label>Source ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Source Key</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>The record name of the related record providing the source data for this accounting entry line.</description>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Reference__c</fullName>
        <label>Source Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>A link to the source record for this Accounting Entry Line</description>
        <formula>HYPERLINK(&apos;/&apos; + Source_ID__c, Source_Name__c, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the source record for this accounting entry line. AEL</inlineHelpText>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Accounting_Entry__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
</CustomObject>